--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
@@ -125,6 +125,8 @@
             {% endfilter %}">
 
             {% for fachgebiet in form.fachgebiete %}
+                {# TODO: Bei 1280x1024 gibt es einen Zeilenumbruch #}
+                {# TODO: Fehlermedlungen für Fachgebiete werden nicht ausgegeben #}
                 <li>
                     {{ form_errors(fachgebiet) }}
                     {{ form_widget(fachgebiet) }}
