--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/studiengangAnzeigen.html.twig
@@ -126,7 +126,7 @@
 
             {% for fachgebiet in form.fachgebiete %}
                 {# TODO: Bei 1280x1024 gibt es einen Zeilenumbruch #}
-                {# TODO: Fehlermedlungen für Fachgebiete werden nicht ausgegeben #}
+                {# TODO: Fehlermeldungen für Fachgebiete werden nicht ausgegeben #}
                 <li>
                     {{ form_errors(fachgebiet) }}
                     {{ form_widget(fachgebiet) }}
