--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -225,18 +225,19 @@
                     {% endif %}
                 </td>
             </tr>
-            {# TODO: wenn leer -> key nicht ausgeben -> testen! #}
-            {% if modulBeschreibung.getFremdeStudiengaenge() is not empty %}
-                <tr>
-                    <td>8</td>
-                    <td colspan="6">
-                        <div class="key">Verwendung des Moduls (in anderen Studiengängen)</div>
+            <tr>
+                <td>8</td>
+                <td colspan="6">
+                    <div class="key">Verwendung des Moduls (in anderen Studiengängen)</div>
+                    {% if modulBeschreibung.getFremdeStudiengaenge() is not empty %}
                         {% for studiengang in modulBeschreibung.getFremdeStudiengaenge() %}
                             {{ studiengang }}<br/>
                         {% endfor %}
-                    </td>
-                </tr>
-            {% endif %}
+                    {% else %}
+                        Das Modul wird in keinem anderen Studiengang verwendet.
+                    {% endif %}
+                </td>
+            </tr>
             <tr>
                 <td>9</td>
                 <td colspan="6">
