Lehrform in Oberfläche mit eingebunden

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -67,8 +67,7 @@
 
             {% block beauftragter %}
             {% endblock beauftragter %}
-
-
+            {{ form_row(form.lehrform) }}
             {{ form_row(form.haeufigkeit) }}
 
             <tr>
